# vkit

./: .editorconfig  .envrc  README.md  pyrightconfig.json  setup.cfg
.github/workflows/: ci.yaml  release-nightly.yaml  release-stable.yaml
README/: README.md
README/EN/: README.md
README/ZH/: README.md
vkit/: opt.py
vkit/augmentation/: opt.py
vkit/augmentation/README/: GEO_AFFINE.md  GEO_INTERFACE.md  GEO_MLS.md  PHO_INTERFACE.md  PHO_NOISE.md  README.md
vkit/augmentation/README/ZH/: GEO_CAMERA.md  GEO_INTERFACE.md  PHO_COLOR.md  README.md
vkit/augmentation/geometric_distortion/: __init__.py  affine.py  camera.py  interface.py  mls.py
vkit/augmentation/geometric_distortion/grid_rendering/: grid_blender.py  grid_creator.py  interface.py  type.py  visualization.py
vkit/augmentation/photometric_distortion/: __init__.py  color.py  interface.py  noise.py  opt.py
vkit/image/: type.py
vkit/image/README/: README.md
vkit/label/: polygon_union.py  type.py  vatti_clipping.py  visualization.py
vkit/label/README/: README.md
vkit/text/font/: README.md  builder.py  tex.py  type.py
vkit/text/lexicon/: README.md  builder.py  opt.py  type.py
vkit/text/lexicon/const/: chinese.py  delimiter.py  digit.py  english.py  whitespace.py
vkit_case/tianchi_ocr/: README.md  prep.py
vkit_case/vkit_doc_helper/: demo_geo.py  demo_pho.py  gif.py
website/: docusaurus.config.js
website/docs/: introduction.md
website/docs/feature/geometric-distortion/: camera.md  example.md  interface.md  mls.md
website/docs/feature/photometric-distortion/: example.md  interface.md
website/docs/utility/: image.md  label.md
website/i18n/zh/docusaurus-plugin-content-docs/current/: introduction.md
website/i18n/zh/docusaurus-plugin-content-docs/current/feature/geometric-distortion/: affine.md
website/i18n/zh/docusaurus-plugin-content-docs/current/utility/: image.md  label.md
website/i18n/zh/docusaurus-theme-classic/: footer.json
